# jacodemon

./: .gitignore  Readme.md  Roadmap.md  analyse.py  pyproject.toml  requirements.txt  run_tests.py  start.py  start2.py
examples/: SIGIL.csv  v3_Season1996.csv  v3_Season2.csv
jacodemon/: app.py  arguments.py  config.py  csv.py  demo.py  dummy.py  exceptions.py  files.py  io.py  last.py  launch.py  logs.py  macros.py  manager.py  map.py  map_utils.py  notifications.py  obs.py  options.py  scenes.py  stats.py  wad.py
jacodemon/controller/: config.py  mapselect.py  observable.py  prelaunch.py  set_controller.py
jacodemon/controller/maps/: cache.py  select.py
jacodemon/controller/sets/: edit.py  select.py
jacodemon/misc/: constants.py  dummy.py  exceptions.py  files.py  io.py  legacy.py  logs.py  macros.py  manager.py  notifications.py  signaling.py
jacodemon/model/: app.py  config.py  demo.py  demo_constants.py  flatmap.py  launch.py  map.py  maps.py  mapset.py  mod.py  observable.py  options.py  stats.py  wad.py
jacodemon/platform/macos/: io.py  macros.py  notifications.py
jacodemon/platform/windows/: io.py  macros.py  (+1 more)
jacodemon/service/: config_service.py  demo_service.py  doom_service.py  dsda_service.py  event_service.py  launch_service.py  map_service.py  map_set_service.py  notification_service.py  obs_service.py  options_service.py  registry.py  stats_service.py  wad_service.py
jacodemon/ui/: config.py  demoselect.py  main.py  mapselect.py  options.py
jacodemon/view/: config.py  mapselect.py  prelaunch.py
jacodemon/wads/: wad.py
jacodemon/wiring/: context.py
lib/py/: arguments.py  config.py  csv.py  demo.py  io.py  keys.py  last.py  launch.py  load_mods.py  logs.py  macros.py  map.py  mod.py  notifications.py  obs.py  options.py  scenes.py  stats.py  ui.py  wad.py
scripts/: analyse.py  rag.py  start.py  v3start.py
tests/: test_csv.py  test_stats.py
tests/data/: JacodemonTest.wad  duplicate_mods.csv  invalid_csv.csv  minimal_csv_duplicate_mods.csv  minimal_csv_missing_files.csv  valid_csv.csv  valid_csv_missing_files.csv  valid_minimal_csv.csv
(+61 files in other folders)
