[tool.poetry]
name = "jacodemon"
version = "1.12.1"
description = "A Doom launcher with support for managing OBS"
authors = ["Jake Stanley <prudentia713@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
common-py = { git = "https://github.com/jakestanley/common-py.git", tag = "0.2.0" }
python = ">=3.12,<3.13"
appdirs = "^1.4.4"
jsonpickle = "^3.2.1"
obsws-python = "^1.7.0"
pyside6 = "^6.7.1"
ahk = { "version" = "^1.7.6", platform = "win32" }
ahk-binary = { "version" = "^2023.9.0", platform = "win32" }
win11toast = { "version" = "^0.35", platform = "win32" }

[tool.poetry.group.dev.dependencies]
parameterized = "^0.9.0"
pytest = "^8.2.2"

[tool.poetry.scripts]
jacodemon = "scripts.start:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
